tests/compile_fail/borrow/skip.rs
#[derive(derive_more::Borrow)]
struct Foo(#[borrow(skip)] i32);

fn main() {}
