tests/compile_fail/borrow/skip.stderr
error: `#[borrow(skip)]` cannot be used when deriving `Borrow` because exactly one field must be borrowed
 --> tests/compile_fail/borrow/skip.rs:2:12
  |
2 | struct Foo(#[borrow(skip)] i32);
  |            ^
